--- a/service/pom.xml
+++ b/service/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
     <modules>
         <module>service_edu</module>
+        <module>service_oss</module>
     </modules>
 
     <artifactId>service</artifactId>
