--- a/service/service_edu/src/main/resources/application.properties
+++ b/service/service_edu/src/main/resources/application.properties
@@ -1,10 +1,14 @@
 # 服务端口
 server.port=8001
+# 应用名称
 server.servlet.application-display-name=edu
+
 # 服务名
 spring.application.name=service-edu
+
 # 环境设置：dev、test、prod
 spring.profiles.active=dev
+
 # mysql数据库连接
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/guli?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true
@@ -19,5 +23,8 @@ spring.jackson.time-zone=GMT+8
 mybatis-plus.global-config.db-config.logic-not-delete-value=0
 mybatis-plus.global-config.db-config.logic-delete-value=1
 
+# 设置日志级别
+#logging.level.root=info
+
 #mybatis日志
-mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+#mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
