1.chapter章节分级显示 2.点击上一步 course回显 3.增删改查 chapter 4.增删改查 video

--- a/service/service_edu/src/main/resources/application.properties
+++ b/service/service_edu/src/main/resources/application.properties
@@ -28,3 +28,6 @@ mybatis-plus.global-config.db-config.logic-delete-value=1
 
 #mybatis日志
 #mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+
+#mybatis的xml文件定位
+mybatis-plus.mapper-locations=classpath:/com/atguigu/edu/mapper/xml/*.xml
