1.课程列表与课程详情 2.教师列表与教师详情 3.视频播放

--- a/service/service_edu/src/main/resources/application.properties
+++ b/service/service_edu/src/main/resources/application.properties
@@ -31,3 +31,25 @@ mybatis-plus.global-config.db-config.logic-delete-value=1
 
 #mybatis的xml文件定位
 mybatis-plus.mapper-locations=classpath:/com/atguigu/edu/mapper/xml/*.xml
+
+#nacos服务地址
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+
+#开启熔断机制
+feign.hystrix.enabled=true
+#熔断请求时间限制
+
+#redis
+spring.redis.host=192.168.174.143
+spring.redis.port=6379
+spring.redis.password=123456
+spring.redis.database= 0
+spring.redis.timeout=1800000ms
+
+spring.redis.lettuce.pool.max-active=20
+#redis最大阻塞等待时间(负数表示没限制)
+spring.redis.lettuce.pool.max-wait=-1ms
+# 连接池中的最大空闲连接
+spring.redis.lettuce.pool.max-idle=5
+# 连接池中的最小空闲连接
+spring.redis.lettuce.pool.mix-idle=0
