--- a/service/service_oss/src/main/resources/application.properties
+++ b/service/service_oss/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8002
 
 #服务名
-spring.application.name=servi ce-oss
+spring.application.name=service-oss
 
 # 环境设置：dev、test、prod
 spring.profiles.active=dev
@@ -15,3 +15,6 @@ aliyun.oss.file.bucketname=dude-tiz
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=100MB
+
+#nacos服务地址
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
