--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <modules>
         <module>service</module>
         <module>common</module>
+        <module>service/service_vod</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -34,10 +35,10 @@
         <httpclient.version>4.5.1</httpclient.version>
         <jwt.version>0.7.0</jwt.version>
         <aliyun-java-sdk-core.version>4.3.3</aliyun-java-sdk-core.version>
-        <aliyun-sdk-oss.version>3.1.0</aliyun-sdk-oss.version>
-        <aliyun-java-sdk-vod.version>2.15.2</aliyun-java-sdk-vod.version>
+        <aliyun-sdk-oss.version>3.9.0</aliyun-sdk-oss.version>
+        <aliyun-java-sdk-vod.version>2.16.11</aliyun-java-sdk-vod.version>
         <aliyun-java-vod-upload.version>1.4.11</aliyun-java-vod-upload.version>
-        <aliyun-sdk-vod-upload.version>1.4.11</aliyun-sdk-vod-upload.version>
+        <aliyun-sdk-vod-upload.version>1.4.15</aliyun-sdk-vod-upload.version>
         <fastjson.version>1.2.28</fastjson.version>
         <gson.version>2.8.2</gson.version>
         <json.version>20170516</json.version>
