Statistics模块统计几个数据，（日期注册人数、登录人数、每日播放视频数、每日新增课程数），让其他模块为他寻找数据（正常情况下数据库不对其他模块开放），使用nacos方法，查询前，先把该日期的记录删条，以免重复

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -16,6 +16,7 @@
         <module>service_test</module>
         <module>service_msm</module>
         <module>service_ucenter</module>
+        <module>service_statistics</module>
     </modules>
 
     <artifactId>service</artifactId>
